Fix Overflow

--- a/css/original.css
+++ b/css/original.css
@@ -51,7 +51,8 @@ section {
 .hero {
   width: 100vw;
   height: 100vh;
-  background: rgba(36, 41, 67, .8)
+  background: rgba(36, 41, 67, .8);
+  overflow:hidden;
 }
 
 .hero-background {
@@ -59,7 +60,7 @@ section {
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
-  overflow:hidden
+  overflow:hidden;
 }
 
 .hero img {
